--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,16 @@
         </activity>
         <activity android:name=".telaLogin" />
         <activity android:name=".telaAnuncio" />
-        <activity android:name=".SelecaoBusca"></activity>
+        <activity android:name=".SelecaoBusca" />
+        <activity android:name=".telaInicio" />
+        <activity
+            android:name=".TelaBusca"
+            android:label="@string/title_activity_tela_busca"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".TelaAtividades"
+            android:label="@string/title_activity_tela_atividades"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
