--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity
             android:name=".TelaAtividades"
             android:label="@string/title_activity_tela_atividades"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".TelaRegistro"
+            android:label="@string/title_activity_tela_registro"
             android:theme="@style/AppTheme"></activity>
     </application>
 
