--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:support-v13:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.google.http-client:google-http-client-gson:1.19.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/gson-2.1.jar')
 }
