--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.google.http-client:google-http-client-gson:1.19.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/gson-2.1.jar')
+    compile files('libs/eventbus-3.0.0-beta1.jar')
 }
