--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="com.example.ftfnunes.booknet">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
         <activity android:name=".telaLogin" />
         <activity android:name=".telaAnuncio" />
         <activity android:name=".SelecaoBusca" />
@@ -36,11 +44,11 @@
         <activity android:name=".TelaFiltro" />
         <activity
             android:name=".AprovacaoDeSolicitacao"
-            android:label="@string/title_activity_aprovacao_de_solicitacao"
+            android:label="title_activity_aprovacao_de_solicitacao"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".LivroEmprestado"
-            android:label="@string/title_activity_livro_emprestado"
+            android:label="title_activity_livro_emprestado"
             android:theme="@style/AppTheme"></activity>
     </application>
 
